[github-xx][fix]: fix color of corner between scrollbars

--- a/app/client/src/app/less/global.less
+++ b/app/client/src/app/less/global.less
@@ -50,3 +50,7 @@ body{
     background: @light-grey;
     border-radius: 5px;
 }
+
+::-webkit-scrollbar-corner{
+    background: @light-grey;
+}
